update donation text on site

--- a/www/index.html
+++ b/www/index.html
@@ -32,7 +32,7 @@
         <li>…and more!</li>
       </ul>
 
-      <p>Please consider <a href="https://www.adsbexchange.com/donate/">donating to ADS-B Exchange</a> if you enjoy this skill.</p>
+      <p>Data from <a href="http://www.adsbexchange.com/">ADS-B Exchange</a> makes this skill possible. Please consider <a href="https://www.adsbexchange.com/donate/">donating to them</a> if you enjoy Aircraft Radar.</p>
 
       <h2>Requirements and Setup</h2>
 
