Clarify asking syntax on webpage

--- a/www/index.html
+++ b/www/index.html
@@ -21,7 +21,7 @@
       <p class="main-p"><strong>Aircraft Radar</strong> uses live <a href="https://en.wikipedia.org/wiki/Automatic_dependent_surveillance_–_broadcast">ADS-B</a>
         radio signals, collected by volunteers, to tell you what airplanes are around you.</p>
 
-      <p>You can ask it:</p>
+      <p>You can ask it “Alexa, ask Aircraft Radar …”:</p>
       <ul>
         <li>“what airplanes are around?”</li>
         <li>“what jets are overhead?”</li>
@@ -48,11 +48,11 @@
         40km of you; and “overhead” only looks for aircraft within 15km of you. Aircraft Radar will tell you about the 4 nearest aircraft
         that match your search.</p>
 
-      <p>You can also ask for just the nearest aircraft — for example, “what’s the nearest airplane” — instead of asking what’s nearby.
+      <p>You can also ask for just the nearest aircraft — for example, “Alexa, ask Aircraft Radar, what’s the nearest airplane” — instead of asking what’s nearby.
         This will return just one result, and it’ll include more details (like the destination airport and a photo, if Aircraft Radar
         can find those, and the plane’s registration number.)</p>
 
-      <p>Finally, you can search just for jets, helicopters, or military aircraft. So, instead of asking “what aircraft are nearby,” you
+      <p>Finally, you can search just for jets, helicopters, or military aircraft. So, instead of asking “Alexa, ask Aircraft Radar what aircraft are nearby,” you
         might ask “what jets are around” or “what helicopters are overhead.”</p>
 
       <h2>Data</h2>
