--- a/www/privacy.html
+++ b/www/privacy.html
@@ -39,20 +39,21 @@
   </div> <!-- /row -->
   </div> <!-- /container -->
 
-  <script type="text/javascript">
-    var _gauges = _gauges || [];
-    (function() {
-      var t   = document.createElement('script');
-      t.type  = 'text/javascript';
-      t.async = true;
-      t.id    = 'gauges-tracker';
-      t.setAttribute('data-site-id', '59c9bf38bad3a76a9212f3b4');
-      t.setAttribute('data-track-path', 'https://track.gaug.es/track.gif');
-      t.src = 'https://d36ee2fcip1434.cloudfront.net/track.js';
-      var s = document.getElementsByTagName('script')[0];
-      s.parentNode.insertBefore(t, s);
-    })();
-  </script>
+<!-- Fathom - simple website analytics - https://github.com/usefathom/fathom -->
+<script>
+(function(f, a, t, h, o, m){
+  a[h]=a[h]||function(){
+    (a[h].q=a[h].q||[]).push(arguments)
+  };
+  o=f.createElement('script'),
+  m=f.getElementsByTagName('script')[0];
+  o.async=1; o.src=t; o.id='fathom-script';
+  m.parentNode.insertBefore(o,m)
+})(document, window, '//fathom.cdzombak.net/tracker.js', 'fathom');
+fathom('set', 'siteId', 'SEFBU');
+fathom('trackPageview');
+</script>
+<!-- / Fathom -->
 
   </body>
 </html>
