Simplify interaction model

--- a/www/index.html
+++ b/www/index.html
@@ -44,8 +44,8 @@
 
       <h2>Questions you can ask</h2>
 
-      <p>Generally, you can ask Aircraft Radar for airplanes that are “nearby” or “overhead”. “Nearby” looks for aircraft within
-        40km of you; and “overhead” only looks for aircraft within 15km of you. Aircraft Radar will tell you about the 4 nearest aircraft
+      <p>You can ask Aircraft Radar for airplanes that are “nearby,” “around,” or “overhead”. It looks for aircraft within
+        40km of you. Aircraft Radar will tell you about the 4 nearest aircraft
         that match your search.</p>
 
       <p>You can also ask for just the nearest aircraft — for example, “Alexa, ask Aircraft Radar, what’s the nearest airplane” — instead of asking what’s nearby.
