update docs to reflect new continuation behavior

--- a/www/index.html
+++ b/www/index.html
@@ -45,8 +45,8 @@
       <h2>Questions you can ask</h2>
 
       <p>You can ask Aircraft Radar for airplanes that are “nearby,” “around,” or “overhead”. It looks for aircraft within
-        40km of you. Aircraft Radar will tell you about the 4 nearest aircraft
-        that match your search.</p>
+        40km of you. Aircraft Radar will tell you about the nearest aircraft
+        that match your search. If there are more than a few, it’ll tell you about the first 3 or 4 and then ask you if you want to hear the rest.</p>
 
       <p>You can also ask for just the nearest aircraft — for example, “Alexa, ask Aircraft Radar, what’s the nearest airplane” — instead of asking what’s nearby.
         This will return just one result, and it’ll include more details (like the destination airport and a photo, if Aircraft Radar
