--- a/www/index.html
+++ b/www/index.html
@@ -18,10 +18,10 @@
       <h1>Aircraft Radar skill for Amazon Alexa</h1>
       <blockquote class="main-quote">“Alexa, ask Aircraft Radar what’s nearby.”</blockquote>
 
-      <p class="main-p"><strong>Aircraft Radar</strong> uses live <a href="https://en.wikipedia.org/wiki/Automatic_dependent_surveillance_–_broadcast">ADS-B</a>
+      <p class="main-p"><strong><a href="https://www.amazon.com/dp/B075XC9L9H/">Aircraft Radar</a></strong> uses live <a href="https://en.wikipedia.org/wiki/Automatic_dependent_surveillance_–_broadcast">ADS-B</a>
         radio signals, collected by volunteers, to tell you what airplanes are around you.</p>
 
-      <p>You can ask it “Alexa, ask Aircraft Radar …”:</p>
+      <p>You can ask it “Alexa, ask <a href="https://www.amazon.com/dp/B075XC9L9H/">Aircraft Radar</a> …”:</p>
       <ul>
         <li>“what airplanes are around?”</li>
         <li>“what jets are overhead?”</li>
@@ -32,37 +32,48 @@
         <li>…and more!</li>
       </ul>
 
-      <p>Data from <a href="http://www.adsbexchange.com/">ADS-B Exchange</a> makes this skill possible. Please consider <a href="https://www.adsbexchange.com/donate/">donating to them</a> if you enjoy Aircraft Radar.</p>
+      <h2>Getting Started</h2>
 
-      <h2>Requirements and Setup</h2>
-
-      <p>Click “Enable Skill” on <a href="https://www.amazon.com/dp/B075XC9L9H/">the Aircraft Radar skill page</a>, or ask
-        Alexa to enable the Aircraft Radar skill.</p>
+      <p><strong>Click “Enable Skill” on <a href="https://www.amazon.com/dp/B075XC9L9H/">the Aircraft Radar skill page</a>,</strong> or ask
+        Alexa to “enable the Aircraft Radar skill”.</p>
 
       <p>This skill requires your Echo to have an address assigned to it, and you’ll need to give Aircraft Radar permission in the Alexa app to access your address. (<a href="permission.png" target="_blank">Here’s a screenshot</a>
         showing that configuration in the Alexa app.)</p>
 
-      <h2>Questions you can ask</h2>
+      <h2>Ask Questions</h2>
 
-      <p>You can ask Aircraft Radar for airplanes that are “nearby,” “around,” or “overhead”. It looks for aircraft within
+      <p>You can ask Aircraft Radar for airplanes that are “nearby,” “around,” or similar words. It looks for aircraft within
         40km of you. Aircraft Radar will tell you about the nearest aircraft
         that match your search. If there are more than a few, it’ll tell you about the first 3 or 4 and then ask you if you want to hear the rest.</p>
 
-      <p>You can also ask for just the nearest aircraft — for example, “Alexa, ask Aircraft Radar, what’s the nearest airplane” — instead of asking what’s nearby.
-        This will return just one result, and it’ll include more details (like the destination airport and a photo, if Aircraft Radar
-        can find those, and the plane’s registration number.)</p>
+      <p>You can also ask for <em>just</em> the nearest aircraft — for example, “Alexa, ask Aircraft Radar, what’s the nearest airplane” — instead of asking what’s nearby.
+        This will return only one result, and it’ll include more details (like the plane’s registration number, and the destination airport and a photo, if Aircraft Radar can find those.)</p>
 
-      <p>Finally, you can search just for jets, helicopters, or military aircraft. So, instead of asking “Alexa, ask Aircraft Radar what aircraft are nearby,” you
-        might ask “what jets are around” or “what helicopters are overhead.”</p>
+      <p>Finally, you can search for jets, helicopters, or military aircraft. So, instead of asking “what aircraft are nearby,” you
+        might ask “Alexa, ask Aircraft Radar what jets are around” or “what helicopters are overhead.”</p>
 
-      <h2>Data</h2>
+      <h2>Data &amp; Accuracy</h2>
 
-      <p>Aircraft data is provided by <a href="http://www.adsbexchange.com">ADS-B Exchange</a>. <strong>You should <a href="https://www.adsbexchange.com/donate/">
-        donate to ADS-B Exchange</a> if you enjoy this skill.</strong></p>
+      <p>Data from <a href="http://www.adsbexchange.com/">ADS-B Exchange</a> makes this skill possible.
+        <strong>Please consider <a href="https://www.adsbexchange.com/donate/">donating to ADS-B Exchange</a></strong> if you enjoy Aircraft Radar.</p>
 
       <p>Be aware that not all airplanes transmit ADS-B data just yet, and not all geographical areas have a volunteer receiving
-        ADS-B transmissions from nearby aircraft. Consider <a href="https://www.adsbexchange.com/how-to-feed/">running your own receiver and
-        feeding the results to ADS-B Exchange</a> if you want to help improve this skill.</p>
+        ADS-B radio transmissions from nearby aircraft. Consider <a href="https://www.adsbexchange.com/how-to-feed/">running your own receiver and
+        feeding the results to ADS-B Exchange</a> if you want to help improve this skill in your geographical area.</p>
+
+      <h2>Donate</h2>
+
+      <p>I pay $5/month for a small <a href="https://www.digitalocean.com">DigitalOcean</a> server,
+        which provides a critical caching layer for the <a href="https://www.amazon.com/dp/B075XC9L9H/">Aircraft Radar</a> skill.</p>
+
+      <p>Please donate as little as you’d like toward that cost via:</p>
+      <ul>
+        <li><a href="https://cash.me/$Dzombak">Square Cash</a></li>
+        <li><a href="https://paypal.me/chrisdzombak">PayPal</a></li>
+      </ul>
+
+      <p>Consider also <a href="https://www.adsbexchange.com/donate/">donating to ADS-B Exchange</a>, the project which
+        makes this skill possible.</p>
 
       <h2>Open-Source</h2>
 
@@ -74,20 +85,6 @@
       </ul>
 
       <p>Pull requests and bug reports are welcome.</p>
-
-      <h2>Donate</h2>
-
-      <p>I pay out of pocket for a $5/month <a href="https://www.digitalocean.com">DigitalOcean</a> virtual server
-        which provides a critical caching layer for the Aircraft Radar service.</p>
-
-      <p>Please donate as little as you’d like toward that cost via:</p>
-      <ul>
-        <li><a href="https://cash.me/$Dzombak">Square Cash</a></li>
-        <li><a href="https://paypal.me/chrisdzombak">PayPal</a></li>
-      </ul>
-
-      <p>Consider also <a href="https://www.adsbexchange.com/donate/">donating to ADS-B Exchange</a>, the project which
-        makes this skill possible.</p>
 
       <h2>Feedback</h2>
 
