Update website & README

--- a/www/index.html
+++ b/www/index.html
@@ -3,9 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
     <title>Aircraft Radar skill for Amazon Alexa</title>
-
     <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="local.css">
@@ -63,17 +61,14 @@
 
       <h2>Donate</h2>
 
-      <p>I pay $5/month for a small <a href="https://www.digitalocean.com">DigitalOcean</a> server,
-        which provides a critical caching layer for the <a href="https://www.amazon.com/dp/B075XC9L9H/">Aircraft Radar</a> skill.</p>
+      <p>I pay for a small <a href="https://www.digitalocean.com">DigitalOcean</a> server,
+        which provides a critical caching layer for the <a href="https://www.amazon.com/dp/B075XC9L9H/">Aircraft Radar</a> skill. I also send a monthly payment to ADS-B Exchange.</p>
 
-      <p>Please donate as little as you’d like toward that cost via:</p>
+      <p>Please donate as little as you’d like toward these costs via:</p>
       <ul>
         <li><a href="https://cash.me/$Dzombak">Square Cash</a></li>
         <li><a href="https://paypal.me/chrisdzombak">PayPal</a></li>
       </ul>
-
-      <p>Consider also <a href="https://www.adsbexchange.com/donate/">donating to ADS-B Exchange</a>, the project which
-        makes this skill possible.</p>
 
       <h2>Open-Source</h2>
 
@@ -121,6 +116,5 @@ fathom('set', 'siteId', 'SEFBU');
 fathom('trackPageview');
 </script>
 <!-- / Fathom -->
-
   </body>
 </html>
