--- a/www/index.html
+++ b/www/index.html
@@ -59,15 +59,17 @@
         ADS-B radio transmissions from nearby aircraft. Consider <a href="https://www.adsbexchange.com/how-to-feed/">running your own receiver and
         feeding the results to ADS-B Exchange</a> if you want to help improve this skill in your geographical area.</p>
 
-      <h2>Donate</h2>
+      <h2>Support/Donate</h2>
 
-      <p>I pay for a small <a href="https://www.digitalocean.com">DigitalOcean</a> server,
-        which provides a critical caching layer for the <a href="https://www.amazon.com/dp/B075XC9L9H/">Aircraft Radar</a> skill. I also send a monthly payment to ADS-B Exchange.</p>
+      <p>In addition to the time required for maintenance and improvements to this software, I pay for a
+        small <a href="https://www.digitalocean.com">DigitalOcean</a> server, which provides a critical caching layer for
+        the <a href="https://www.amazon.com/dp/B075XC9L9H/">Aircraft Radar</a> skill. I also send a monthly payment to ADS-B Exchange.</p>
 
-      <p>Please donate as little as you’d like toward these costs via:</p>
+      <p>Please donate whatever you’d like toward these costs:</p>
       <ul>
         <li><a href="https://cash.me/$Dzombak">Square Cash</a></li>
         <li><a href="https://paypal.me/chrisdzombak">PayPal</a></li>
+        <li>Or, surprise me with something from <a href="https://www.amazon.com/hz/wishlist/ls/D9ZVS5LB73Y7/">my Amazon wishlist</a></li>
       </ul>
 
       <h2>Open-Source</h2>
