--- a/www/privacy.html
+++ b/www/privacy.html
@@ -13,6 +13,15 @@
   <div class="container main-page">
   <div class="row">
     <div class="col-sm-10 col-sm-push-2">
+      <div class="alert alert-warning">
+        <p><strong>The Aircraft Radar skill is no longer available.</strong></p>
+        <p>ADS-B Exchange, who previously enthusiastically supported this project, have removed the API this skill used to fetch live aircraft traffic, and they have not replied to multiple attempts to contact them.</p>
+        <p>It’s possible the skill will come back one day, if and when I have time to migrate it to another data source API. The <a href="https://opensky-network.org">OpenSky Network</a> is the most likely alternative. Achieving feature parity with the ADS-B Exchange version of the skill would, however, likely require integrating with some other data source for airline and flight information, adding to the research and time required to migrate to a new data source.</p>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-10 col-sm-push-2">
       <h1><a href="/">Aircraft Radar skill for Amazon Alexa</a></h1>
       <h2>Privacy Policy</h2>
 
